# enton

./: README.md  pyproject.toml
scripts/: README.md
scripts/data/: optimize_models.py
scripts/dev/: live_yolo.py  vision_monitor.py  voice_monitor.py
scripts/setup/: load_commonsense.py  phone_setup.sh
scripts/tests/: smoke_test_f1.py  verify_phase2.py  verify_phase3.py
src/enton/: app.py
src/enton/cognition/: brain.py  fuser.py
src/enton/core/: context_engine.py
src/enton/perception/: ears.py  vision.py  visualization.py
src/enton/providers/: groq_stt.py  local.py
src/enton/skills/: director_toolkit.py  picoclaw_toolkit.py
tests/: README.md
tests/manual/: manual_test_crypto.py  manual_test_godmode.py  manual_test_neurosurgeon.py
tests/unit/: test_picoclaw_toolkit.py
tests/unit/cognition/: test_awareness.py  test_brain.py  test_commonsense.py  test_desires.py  test_dream.py  test_fuser.py  test_humor.py  test_i18n.py  test_knowledge_crawler.py  test_memory.py  test_memory_tiers.py  test_metacognition.py  test_persona.py  test_planner.py  test_prediction.py  test_prompts.py  test_self_model.py
tests/unit/core/: test_app_structure.py  test_config.py  test_context_engine.py  test_error_handler.py  test_events.py  test_extension_registry.py  test_gwt.py  test_gwt_integration.py  test_gwt_perception.py  test_hardware.py  test_lifecycle.py  test_process_manager.py  test_vram_manager.py
tests/unit/perception/: test_actions.py  test_visual_memory.py
tests/unit/providers/: test_ai_delegate.py  test_tts_providers.py
tests/unit/skills/: test_android_toolkit.py  test_file_toolkit.py  test_forge.py  test_github_learner.py  test_hass.py  test_shell_enhanced.py  test_shell_security.py  test_skill_registry.py  test_start_skills.py  test_sub_agents.py  test_toolkits.py
