[project]
name = "enton"
version = "0.1.0"
description = "Autonomous AI robot assistant with vision, voice, and personality"
readme = "README.md"
authors = [{ name = "Gabriel Maia", email = "gabrielmaialva33@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    # Agno framework (core + provider extras)
    "agno[ollama,groq,google,nvidia,openrouter,qdrant]>=2.0",
    # Google Cloud (STT/TTS only — LLM via Agno)
    "google-genai>=1.0",
    "google-cloud-speech>=2.28",
    "google-cloud-texttospeech>=2.22",
    # NVIDIA Riva (STT/TTS only — LLM via Agno)
    "nvidia-riva-client>=2.17",
    # Perception
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "faster-whisper>=1.1",
    "silero-vad>=5.1",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.19",
    # TTS
    "kokoro>=0.9",
    "qwen-tts>=0.1",
    "edge-tts>=7.0",
    "numba>=0.60",  # force modern numba for Python 3.12+ (qwen-tts→librosa chain)
    # VLM local (transformers — last resort)
    "transformers>=4.47",
    "accelerate>=1.2",
    "torch>=2.5",
    "qwen-vl-utils>=0.0.8",
    # Visual Memory & Knowledge (v0.3.0)
    "open-clip-torch>=2.26",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "crawl4ai>=0.4.2",
    # Self-Evolution (v0.4.0)
    "watchfiles>=1.0",
    # System & infra
    "psutil>=6.0",
    "redis>=5.0",
    "aio-pika>=9.4",
    "asyncpg>=0.30",
    # Channels (v0.9.0)
    "aiogram>=3.15",  # Telegram
    "py-cord>=2.6",   # Discord
    # API & dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pydantic-settings>=2.7",
    # Required by Agno
    "openai>=1.50",
    "sqlalchemy>=2.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-freezer>=0.4.9",
    "mypy>=1.0",
]

[project.scripts]
enton = "enton.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enton"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "TCH", "PL", "RUF", "A", "C4", "ISC", "LOG"
]
ignore = [
    "E402",    # module-level import not at top (lazy/conditional imports)
    "E501",    # line too long (formatter handles most)
    "E722",    # bare except
    "N806",    # variable naming (uppercase in functions)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "PLC0415", # conditional imports
    "PLW0603", # global statement
    "PLW1510", # subprocess.run without check
    "PLW2901", # loop variable overwritten
    "RUF001",  # ambiguous unicode (PT-BR strings)
    "RUF002",  # ambiguous unicode docstring
    "RUF003",  # ambiguous unicode comment
    "RUF006",  # asyncio fire-and-forget
    "RUF012",  # mutable class default
    "RUF013",  # implicit Optional
    "RUF059",  # unused variables (prefixed _)
    "SIM102",  # collapsible if
    "SIM105",  # use contextlib.suppress
    "SIM108",  # ternary instead of if-else
    "TC001",   # type-checking import (stdlib)
    "TC002",   # type-checking import (3rd party)
    "TC003",   # type-checking import (stdlib Path etc)
    "UP042",   # class inheritance
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false # Too noisy for now
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false # Relaxed to pass existing code
disallow_untyped_decorators = false
no_implicit_optional = false # Relaxed
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "skip" # Skip analyzing imports to avoid deep errors
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: requires physical hardware (camera, mic, GPU)",
]
